mini-elp/crates/elp/src/resources/test/parse_error/eqwalize_parse_error_a.pretty
error: expected_subtype
   ┌─ parse_error_a/src/parse_error_a.erl:20:5
   │
20 │     X.
   │     ^ X.
Expected: atom()
Got     : [number()]


1 ERROR
